--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <SurfaceView
+    <androidx.camera.view.PreviewView
         android:id="@+id/scanner"
         android:layout_width="0dp"
         android:layout_height="0dp"
